scrollbar fix to avoid mobile issue

--- a/src/styles/1-basics/_global.sass
+++ b/src/styles/1-basics/_global.sass
@@ -1,6 +1,7 @@
 body 
     font-family: Arial, Helvetica, sans-serif
-    overflow: hidden //this hides sccrollbars in the  browser//
+    overflow: scroll
+    overflow-x: hidden //this hides vertical scrollbars in the  browser//
 
 a
     text-decoration: none
