--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
-  overflow: hidden;
+  overflow: scroll;
+  overflow-x: hidden;
 }
 
 a {
